QA_Ipreo/src/objects/Contract__c.object
<CustomObject>
    <description>Used instead of the standard Contract object to allow queues.</description>
    <fields>
        <fullName>Account_Vertical__c</fullName>
        <formula>TEXT(Account__r.Vertical__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sold To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Any_Change_to_Audit_Rights_in_RS_T_CM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any Change to Audit Rights in RS&amp;T/CM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_Change_to_Terms_of_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any Change to Terms of Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignment_Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assignment Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associated_MSA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated MSA</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contract__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Audit_Rights_Removed_or_Diluted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Audit Rights Removed or Diluted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bill To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts (Account)</relationshipLabel>
        <relationshipName>Contracts1_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts (Billing Contact)</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Frequency_Other_Please_Specify__c</fullName>
        <label>Billing Frequency - Other Please Specify</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <label>Billing Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upfront</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Start_Date_Other_Pls_Specify__c</fullName>
        <label>Billing Start Date - Other Pls Specify</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Start_Date__c</fullName>
        <label>Billing Start Date</label>
        <picklist>
            <picklistValues>
                <fullName>Subscription Start Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_State_Province__c</fullName>
        <label>Billing State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Postal_Code__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Continuity_and_Disaster_Recover__c</fullName>
        <label>Business Continuity and Disaster Recover</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cap_to_Cust_Liability_for_Direct_Damages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cap to Cust Liability for Direct Damages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_of_Control_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change of Control Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Age_Days__c</fullName>
        <description>Number of days contract has been open. If there is an Effective date populated, then it will use that as the end date.</description>
        <formula>IF(ISBLANK( Customer_Signed_Date__c ), TODAY() -  Initial_Submission_Date__c , Customer_Signed_Date__c - Initial_Submission_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_ID__c</fullName>
        <displayFormat>CON-{000000}</displayFormat>
        <label>Contract ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <inlineHelpText>MSA With Schedules: Master Services Agreement
Data Agreement: change to data access
Project Agreement:  customer consent to purchase Project
Amendment/Schedule:  new schedule assoc with existing MSA
Additional User Agreement:  change to No. of users</inlineHelpText>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>MSA with Schedules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amendment/Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional User Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Form Agreement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contracts_Team_Approval_Date__c</fullName>
        <label>Contracts Team Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contracts_Team_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contracts Team Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Counter_Signed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Counter Signed  By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Counter_Signed_Date__c</fullName>
        <label>Counter Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Code_of_Conduct_Policies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Code of Conduct/Policies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Signed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Must be manually populated</description>
        <label>Customer Signed By</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <infoMessage>Select a contact from the Account, or remove the filter to select contacts from other Accounts.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts (Customer Signed By)</relationshipLabel>
        <relationshipName>Signed_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Signed_Date__c</fullName>
        <description>Must be manually populated</description>
        <label>Customer Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Hosting_Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Hosting Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Detailed_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Detailed Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EU_Standard_Clauses_Requirement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EU Standard Clauses Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evergreen_Period_Other_Please_Specify__c</fullName>
        <inlineHelpText>Day(s)</inlineHelpText>
        <label>Evergreen Period - Other Please Specify</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Evergreen_Period__c</fullName>
        <label>Evergreen Period</label>
        <picklist>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>180</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Evergreen__c</fullName>
        <label>Evergreen</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exit_Management_and_Transition_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exit Management and Transition Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Governing_Law__c</fullName>
        <label>Governing Law</label>
        <picklist>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Indemnification_Other_than_IP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indemnification Other than IP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Submission_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Initial Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Certificates__c</fullName>
        <label>Insurance Certificates</label>
        <picklist>
            <controllingField>Insurance_Requirements__c</controllingField>
            <picklistValues>
                <fullName>Certificate of Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Named As Additional Insured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notice of Change</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Insurance_Requirements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insurance Requirements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Liability_Limits_for_Ipreo__c</fullName>
        <label>Liability Limits for Ipreo</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;$3M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$3M-5M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;$5M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Most_Favored_Nation_Exclusivity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Most Favored Nation/Exclusivity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Attachments__c</fullName>
        <description>Used to calculate the number of attachments on the contract, this field will not on the page layout, it&apos;s for validation.</description>
        <label>No. of Attachments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Solicit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Solicit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notice_of_Approaching_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Management approval reason.</description>
        <inlineHelpText>Request for Ipreo to provide customer with notice of approaching renewal period.</inlineHelpText>
        <label>Notice of Approaching Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notice_of_Fee_Increase_Period__c</fullName>
        <label>Notice of Fee Increase Period</label>
        <picklist>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notice_of_Fee_Increase_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notice of Fee Increase Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notice_of_Renewal_Fees_Written_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notice of Renewal Fees/Written Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notice_on_Change_of_Site_Policies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notice on Change of Site Policies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_on_Changes_to_Subcontractors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify on Changes to Subcontractors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>30 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Publicity_Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publicity Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number__c</fullName>
        <label>Purchase Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Purchase Order Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Notice_Period__c</fullName>
        <label>Renewal Notice Period</label>
        <picklist>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Notice_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Notice Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Restriction_on_Transfer_of_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restriction on Transfer of Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Right_to_Aggregate_Data_Removed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Right to Aggregate Data Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sharepoint_Folder__c</fullName>
        <inlineHelpText>This URL field will only work when you are connected to the Ipreo network.</inlineHelpText>
        <label>Sharepoint Folder</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Special_Billing_Info__c</fullName>
        <label>Special Billing Info</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Executed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fully Executed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subcontractor_Access_Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subcontractor Access Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Termination_for_Convenience__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Termination for Convenience</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uncapped_Liability_for_Ipreo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uncapped Liability for Ipreo</label>
        <type>Checkbox</type>
    </fields>
    <label>Contract</label>
    <listViews>
        <fullName>AllContracts</fullName>
        <columns>NAME</columns>
        <columns>Contract_Type__c</columns>
        <columns>Account__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>Contracts_Fully_Executed</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Vertical__c</columns>
        <columns>Contract_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Contract_Age_Days__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Fully Executed</value>
        </filters>
        <label>Contracts - Fully Executed</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contracts_New_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Vertical__c</columns>
        <columns>Contract_ID__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Contracts New This Week</label>
    </listViews>
    <listViews>
        <fullName>Contracts_New_Today</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Vertical__c</columns>
        <columns>Contract_ID__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Contracts New Today</label>
    </listViews>
    <listViews>
        <fullName>Contracts_Pending_Status</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Vertical__c</columns>
        <columns>Contract_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Contract_Age_Days__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Contracts - Pending Status</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contracts_Queue_Contract_Customer</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Vertical__c</columns>
        <columns>Contract_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Contract_Age_Days__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Customer Executed</value>
        </filters>
        <label>Contracts - Customer Executed</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Billing_Acnt_req_at_Status_Cus_and_Fully</fullName>
        <active>true</active>
        <description>Billing Account required at Status &quot;Customer Executed&quot; or &quot;Fully Executed&quot;</description>
        <errorConditionFormula>ISBLANK( Billing_Account__c )  &amp;&amp;  
(ISPICKVAL( Status__c , &apos;Customer Executed&apos;)  || 
ISPICKVAL( Status__c , &apos;Fully Executed&apos;))</errorConditionFormula>
        <errorDisplayField>Billing_Account__c</errorDisplayField>
        <errorMessage>Billing Account required at Status &quot;Customer Executed&quot; or &quot;Fully Executed&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Readonly_When_Fully_Executed</fullName>
        <active>true</active>
        <description>Using custom permission, Edit_Fully_Executed_Contract, because some permission sets need the ability to edit fully executed contracts, and validation rules cannot reference permission sets.</description>
        <errorConditionFormula>ISPICKVAL( PRIORVALUE(Status__c), &apos;Fully Executed&apos;)  &amp;&amp; 
$Profile.Name != &apos;System Administrator&apos; &amp;&amp; NOT ( $Permission.Edit_Fully_Executed_Contract )</errorConditionFormula>
        <errorMessage>Cannot edit fully executed contracts.  Please ask the Contracts or Sales Ops team to make any necessary changes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Approval_Date_When_Fully_Executed</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( Status__c, &quot;Fully Executed&quot;) &amp;&amp; ISBLANK( Contracts_Team_Approval_Date__c )</errorConditionFormula>
        <errorDisplayField>Contracts_Team_Approval_Date__c</errorDisplayField>
        <errorMessage>Contracts Team Approval Date required when contract is fully executed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Approver_when_fully_executed</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( Status__c , &quot;Fully Executed&quot;) &amp;&amp; ISBLANK( Contracts_Team_Approver__c )</errorConditionFormula>
        <errorDisplayField>Contracts_Team_Approver__c</errorDisplayField>
        <errorMessage>Contracts Team Approver required when contract is fully executed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Attachment_When_Executed</fullName>
        <active>true</active>
        <errorConditionFormula>(No_of_Attachments__c = 0 ||  ISBLANK(No_of_Attachments__c) )
&amp;&amp; (ISPICKVAL( Status__c , &apos;Customer Executed&apos;) || ISPICKVAL( Status__c , &apos;Fully Executed&apos;))</errorConditionFormula>
        <errorMessage>Attachment required to execute this contract</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Billing_City_When_Executed</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Billing_City__c ) &amp;&amp; 
( 
ISPICKVAL( Status__c , &apos;Customer Executed&apos;) || 
ISPICKVAL( Status__c , &apos;Fully Executed&apos;) 
)</errorConditionFormula>
        <errorDisplayField>Billing_City__c</errorDisplayField>
        <errorMessage>Billing City required to execute this contract</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Billing_Contact_When_Executed</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Billing_Contact__c)  &amp;&amp; 
( 
ISPICKVAL( Status__c , &apos;Customer Executed&apos;) || 
ISPICKVAL( Status__c , &apos;Fully Executed&apos;) 
)</errorConditionFormula>
        <errorDisplayField>Billing_Contact__c</errorDisplayField>
        <errorMessage>Billing Contact required to execute this contract</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Billing_Country_When_Executed</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Billing_Country__c)  &amp;&amp; 
( 
ISPICKVAL( Status__c , &apos;Customer Executed&apos;) || 
ISPICKVAL( Status__c , &apos;Fully Executed&apos;) 
)</errorConditionFormula>
        <errorDisplayField>Billing_Country__c</errorDisplayField>
        <errorMessage>Billing Country required to execute this contract</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Billing_Frequency_Other_Please</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Billing_Frequency__c , &apos;Other&apos; ) &amp;&amp;  ISBLANK( Billing_Frequency_Other_Please_Specify__c )</errorConditionFormula>
        <errorDisplayField>Billing_Frequency_Other_Please_Specify__c</errorDisplayField>
        <errorMessage>Billing Frequency - Other Please Specify required when Billing Frequency is &quot;Other&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Billing_Frequency_When_Executed</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Billing_Frequency__c , &apos;&apos;) &amp;&amp;
(
ISPICKVAL( Status__c , &apos;Customer Executed&apos;) ||
ISPICKVAL( Status__c , &apos;Fully Executed&apos;)
)</errorConditionFormula>
        <errorDisplayField>Billing_Frequency__c</errorDisplayField>
        <errorMessage>Billing Frequency required to execute this contract</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Billing_StartDate_When_Executed</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Billing_Start_Date__c , &apos;&apos;) &amp;&amp; 
( 
ISPICKVAL( Status__c , &apos;Customer Executed&apos;) || 
ISPICKVAL( Status__c , &apos;Fully Executed&apos;) 
)</errorConditionFormula>
        <errorDisplayField>Billing_Start_Date__c</errorDisplayField>
        <errorMessage>Billing Start Date required to execute this contract</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Billing_Start_Date_Other_Please</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Billing_Start_Date_Other_Pls_Specify__c ) &amp;&amp; ISPICKVAL( Billing_Start_Date__c , &apos;Other&apos;)</errorConditionFormula>
        <errorDisplayField>Billing_Start_Date_Other_Pls_Specify__c</errorDisplayField>
        <errorMessage>Billing Start Date - Other Please Specify required when Billing Start Date is &quot;Other&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Billing_Street_When_Executed</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Billing_Street__c)  &amp;&amp; 
( 
ISPICKVAL( Status__c , &apos;Customer Executed&apos;) || 
ISPICKVAL( Status__c , &apos;Fully Executed&apos;) 
)</errorConditionFormula>
        <errorDisplayField>Billing_Street__c</errorDisplayField>
        <errorMessage>Billing Street required to execute this contract</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Counter_Signed_By_When_Executed</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(  Counter_Signed_By__c  ) &amp;&amp; ISPICKVAL( Status__c , &apos;Fully Executed&apos;)</errorConditionFormula>
        <errorDisplayField>Counter_Signed_By__c</errorDisplayField>
        <errorMessage>Counter Signed By required to execute this contract</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Counter_Signed_Date_When_Executed</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(  Counter_Signed_Date__c ) &amp;&amp; ISPICKVAL( Status__c , &apos;Fully Executed&apos;)</errorConditionFormula>
        <errorDisplayField>Counter_Signed_Date__c</errorDisplayField>
        <errorMessage>Counter Signed Date required to execute this contract</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Customer_Signed_Date_When_Executed</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(  Customer_Signed_Date__c  ) &amp;&amp;
( 
ISPICKVAL( Status__c , &apos;Customer Executed&apos;) || 
ISPICKVAL( Status__c , &apos;Fully Executed&apos;) 
)</errorConditionFormula>
        <errorDisplayField>Customer_Signed_Date__c</errorDisplayField>
        <errorMessage>Customer Signed Date required to execute this contract</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Effective_Date_When_Executed</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(  Effective_Date__c ) &amp;&amp; ISPICKVAL( Status__c , &apos;Fully Executed&apos;)</errorConditionFormula>
        <errorDisplayField>Effective_Date__c</errorDisplayField>
        <errorMessage>Effective Date required to execute this contract</errorMessage>
    </validationRules>
</CustomObject>